// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button - корректность отрисовки Button без текста рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button small false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Button - корректность отрисовки Button в состоянии disabled рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button small false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Button - корректность отрисовки Button с индикацией загрузки рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button small loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Button - корректность отрисовки Button с текстом рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button small false "
  type="button"
>
  <p
    className="text undefined"
  >
    Нажми на меня
  </p>
</button>
`;
